# pyobs-core

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGELOG.rst  CLAUDE.md  DESIGN_ICamera_IExposure.md  DESIGN_IDataSequence.md  DESIGN_Image_trim.md  DESIGN_exception_handling.md  DESIGN_module_location.md  DEVELOPMENT.md  DEV_STARTUP.md  Dockerfile  IStructuredConfig-spec.md  LICENSE  README.md  TODO.md  UPDATE_DOCS.md  autocompletion.bash  check_coverage.md  check_mocks.md  check_tests.md  conftest.py  create_interface_proxies.py  dummy-telescope-split-design.md  external-interfaces-implementation-plan.md  external-interfaces-spec.md  mypy.ini  pyobs.service  pyproject.toml  pyrefly.toml  requirements.txt  setup.py  tracking-mode-design.md  tracking-mode-implementation-plan.md
.github/: dependabot.yml
.github/workflows/: lint.yml  mypy.yml  pypi.yml  pyrefly.yml  pytest-integration.yml  pytest.yml  ruff.yml
docs/: Makefile  create_rst.py  make.bat
docs/images/: structure_iag50cm.drawio
docs/pytel/: pytel.rst
docs/source/: basicusage.rst  cli.rst  comm.rst  conf.py  development.rst  index.rst  installation.rst  installing.rst  overview.rst  quickstart.rst  whatsnew-2.0.rst
export/typescript/: create_interfaces.py  pyobs_interfaces.ts
pyobs/: __init__.py  application.py  background_task.py  environment.py  object.py  version.py
pyobs/auth/: __init__.py
pyobs/cli/: _cli.py  pyobs  pyobs.py  pyobsd  pyobsd.py  pyobsw.py
pyobs/comm/: __init__.py  comm.py  commlogging.py  exceptions.py  proxy.py  sharedvariablecache.py
pyobs/database/: database.py
pyobs/events/: __init__.py  badweather.py  clientdisconnected.py  event.py  exposurestatuschanged.py  filterchanged.py  focusfound.py  goodweather.py  initialized.py  log.py  modechanged.py  moduleclosed.py  moduleopened.py  motionstatuschanged.py  move.py  newimage.py  newreducedimage.py  newspectrum.py  offsets.py  roofclosing.py  roofopened.py  taskfailed.py  taskfinished.py  taskstarted.py  telescopemoving.py  testevent.py  variablechanged.py  variablesupdate.py
pyobs/images/: __init__.py  calibration.py  dark.py  flat.py  image.py  processor.py
pyobs/interfaces/: IAbortable.py  IAcquisition.py  IAltAz.py  IAltAzMount.py  IAltAzOffsets.py  IAutoFocus.py  IAutoGuiding.py  IAutonomous.py  IBinning.py  ICalibrate.py  ICamera.py  ICameraBinning.py  ICameraExposureTime.py  ICameraWindow.py  IConfig.py  IConfigProvider.py  ICooling.py  ICoordinatesQuery.py  ICoordsHGS.py  IData.py  IDataSequence.py  IDome.py  IEquatorialMount.py  IEquitorialMount.py  IExposure.py  IExposureTime.py  IFilters.py  IFitsHeaderAfter.py  IFitsHeaderBefore.py  IFitsHeaderProvider.py  IFlatField.py  IFocusModel.py  IFocuser.py  IGain.py  IImageDB.py  IImageFormat.py  IImageGrabber.py  IImageType.py  ILatLon.py  IMastermind.py  (+43 more)
pyobs/mixins/: __init__.py  camerasettings.py  fitsheader.py  fitsnamespace.py  follow.py  imagegrabber.py  motionstatus.py  pipeline.py  tablestorage.py  waitformotion.py  weatheraware.py
pyobs/modules/: __init__.py  module.py
pyobs/robotic/: __init__.py  observation.py  observationarchive.py  schedule.py  scheduledtask.py  scheduler.py  task.py  taskarchive.py  taskrunner.py  taskschedule.py
pyobs/tasks/: conditions.py  factory.py  task.py
pyobs/utils/: average.py  cache.py  config.py  config_schema.py  coordinates.py  curvefit.py  enums.py  exceptions.py  fits.py  grids.py  http.py  influxdb.py  logger.py  modulegui.py  parallel.py  pid.py  serialization.py  shellcommand.py  targetpicker.py  time.py  types.py  units.py
pyobs/vfs/: __init__.py  archivefile.py  bufferedfile.py  file.py  gzippipe.py  httpfile.py  localfile.py  memfile.py  sftpfile.py  smbfile.py  sshfile.py  tarfile.py  tempfile.py  vfs.py
pytel/: __init__.py  application.py  environment.py  object.py
pytel/auth/: auth.py
pytel/comm/: __init__.py  comm.py  commlogging.py  exceptions.py  proxy.py  sharedvariablecache.py
pytel/database/: __init__.py  database.py
pytel/events/: __init__.py  badweather.py  clientconnected.py  log.py  roofclosing.py  variablechanged.py  variablesupdate.py
pytel/gui/: clientgui.py
pytel/interfaces/: IAbortable.py  IAutoFocus.py  IAutoGuiding.py  ICamera.py  ICameraBinning.py  ICameraWindow.py  ICooling.py  IDome.py  IFilters.py  IFitsHeaderProvider.py  IFocusModel.py  IFocuser.py  IImageDB.py  IMotion.py  IMotionDevice.py  IMoving.py  IRoof.py  IRotation.py  IStatus.py  IStoppable.py  ITaskDB.py  ITelescope.py  IWeather.py  __init__.py  interface.py
pytel/modules/: __init__.py  module.py
pytel/tasks/: __init__.py  factory.py  task.py
pytel/utils/: average.py  cache.py  fits.py  logger.py  pid.py  time.py
pytel/vfs/: __init__.py  gzippipe.py  httpfile.py  localfile.py  memfile.py  sshfile.py  tarfile.py  tempfile.py  vfs.py
scripts/: check_changelog.sh  check_pyobs_releases.sh
scripts/xmpp/: check_ejabberd_notify.py  delete_pubsub_nodes.py  list_pubsub_nodes.py  show_module_info.py
specs/adrs/: 0001-interface-state-checked-by-own-declaration-not-inheritance.md  0002-xmpp-stream-conflict-quits-instead-of-reconnecting.md  0003-proxy-access-restricted-to-async-with.md  0004-acl-enforcement-on-callee-not-caller.md  0005-iconfig-stays-a-stringly-keyed-fallback.md  0006-wait-for-state-returns-none-on-timeout.md  0007-get-interfaces-waits-before-raising-indexerror.md  0008-safe-send-keeps-bounded-retry-unlike-capability-subscribe-fetches.md
specs/design/: exception_handling.md  external_interfaces_registry.md  icamera_iexposure.md  idatasequence.md  image_trim.md  istructuredconfig.md  module_observer_location.md  pyobs_2_0_wire_protocol.md  rpc_gating_on_startup.md
specs/plans/: ejabberd-throughput-benchmarking.md  enforce-state-publishing.md  pyobs_2_0_work_plan.md  reconstructed-exception-handling.md  reconstructed-icamera-iexposure.md  reconstructed-idatasequence.md  reconstructed-image-trim.md  reconstructed-module-observer-location.md  (+1 more)
tests/: conftest.py  helpers.py  test_background_task.py  test_events.py  test_object.py
(+937 files in other folders)
