[tool.poetry]
name = "pyobs-core"
packages = [{ include = "pyobs" }]
version = "1.15.0"
description = "robotic telescope software"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
scipy = "^1.11.3"
astropy = "^5.3.4"
numpy = "^1.26.0"
pytz = "^2023.3.post1"
PyYAML = "^6.0.1"
typing-extensions = "^4.8.0"
astroquery = "^0.4.6"
slixmpp = "^1.8.4"
single-source = "^0.3.0"
dbus-next = "^0.2.3"
asyncinotify = "^4.0.2"
sep = { version = "^1.2.1", platform = "linux", optional = true }
python-daemon = "^3.0.1"
pandas = "^2.1.1"
astroplan =  "^0.9.1"
paramiko = "^3.3.1"
py-expression-eval = "^0.3.14"
requests = "^2.31.0"
ccdproc = { version = "^2.4.1", optional = true }
photutils = { version = "^1.9.0", optional = true }
lmfit = { version = "^1.2.2", optional = true }
tornado = { version = "^6.3.3", optional = true }
python-telegram-bot = { version = "^20.6", optional = true }
aiohttp = "^3.8.6"

[tool.poetry.extras]
full = ['asyncinotify', 'sep', 'python-daemon', 'pandas', 'paramiko',
        'ccdproc', 'photutils', 'lmfit', 'tornado', 'python-telegram-bot',
        'aiohttp']

[tool.poetry.dev-dependencies]
types-cryptography = "^3.3.23.2"
types-enum34 = "^1.1.8"
types-ipaddress = "^1.0.8"
types-paramiko = "^3.3.0.0"
types-pytz = "^2023.3.1.1"
types-PyYAML = "^6.0.12.12"
types-requests = "^2.31.0.8"
types-setuptools = "^68.2.0.0"
types-toml = "^0.10.8.7"
types-tornado = "^5.1.1"
mypy = "^1.5.1"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.9.1"
pre-commit = "^3.4.0"

[tool.poetry.scripts]
pyobs = 'pyobs.cli.pyobs:main'
pyobsd = 'pyobs.cli.pyobsd:main'
pyobsw = 'pyobs.cli.pyobsw:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39', 'py311']
