[tool.poetry]
name = "pyobs-core"
packages = [{ include = "pyobs" }]
version = "1.22.1"
description = "robotic telescope software"
authors = ["Tim-Oliver Husser <thusser@uni-goettingen.de>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
scipy = "^1.15.2"
astropy = "^7.0.1"
numpy = "^2.2.5"
pytz = "^2025.2"
PyYAML = "^6.0.2"
typing-extensions = "^4.13.2"
astroquery = "^0.4.10"
slixmpp = "^1.10.0"
single-source = "^0.4.0"
dbus-next = "^0.2.3"
asyncinotify = "^4.2.1"
sep = { version = "^1.4.1", platform = "linux", optional = true }
python-daemon = "^3.1.2"
pandas = "^2.2.3"
astroplan =  "^0.10.1"
paramiko = "^3.5.1"
py-expression-eval = "^0.3.14"
requests = "^2.32.3"
ccdproc = { version = "^2.4.3", optional = true }
photutils = { version = "^2.2.0", optional = true }
lmfit = { version = "^1.3.3", optional = true }
tornado = { version = "^6.4.2", optional = true }
python-telegram-bot = { version = "^22.0", optional = true }
aiohttp = "^3.11.18"

[tool.poetry.extras]
full = ['asyncinotify', 'sep', 'python-daemon', 'pandas', 'paramiko',
        'ccdproc', 'photutils', 'lmfit', 'tornado', 'python-telegram-bot',
        'aiohttp']

[tool.poetry.dev-dependencies]
types-cryptography = "^3.3.23.2"
types-enum34 = "^1.1.8"
types-ipaddress = "^1.0.8"
types-paramiko = "^3.5.0.20240928"
types-pytz = "^2025.2.0.20250326"
types-PyYAML = "^6.0.12.20250402"
types-requests = "^2.32.0.20250328"
types-setuptools = "^80.3.0.20250505"
types-toml = "^0.10.8.20240310"
types-tornado = "^5.1.1"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-cov = "^6.1.1"
pytest-mock = "^3.14.0"
black = "^25.1.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
pyobs = 'pyobs.cli.pyobs:main'
pyobsd = 'pyobs.cli.pyobsd:main'
pyobsw = 'pyobs.cli.pyobsw:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39', 'py311']
