[project]
name = "pyobs-core"
version = "1.31.2"
description = "robotic telescope software"
authors = [{ name = "Tim-Oliver Husser", email = "thusser@uni-goettingen.de" }]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "scipy>=1.15.2,<2",
    "astropy>=7.0.1,<8",
    "numpy>=2.2.5,<3",
    "pytz~=2025.2",
    "PyYAML>=6.0.2,<7",
    "typing-extensions>=4.13.2,<5",
    "astroquery>=0.4.10,<0.5",
    "slixmpp==1.8.4",
    "single-source>=0.4.0,<0.5",
    "dbus-next>=0.2.3,<0.3",
    "astroplan>=0.10.1,<0.11",
    "py-expression-eval>=0.3.14,<0.4",
    "requests>=2.32.3,<3",
    "pandas>=2.2.3",
    "paramiko>=3.5.1",
    "aiohttp>=3.11.18,<4",
    "colour>=0.1.5,<0.2",
]

[project.optional-dependencies]
full = [
    "asyncinotify>=4.2.1,<5",
    "sep>=1.4.1,<2 ; sys_platform == 'linux'",
    "python-daemon>=3.1.2,<4",
    "ccdproc>=2.4.3,<3",
    "photutils>=2.2.0,<3",
    "lmfit>=1.3.3,<2",
    "tornado>=6.4.2,<7",
    "python-telegram-bot~=22.0",
    "opencv-python-headless>=4.10.0.84",
    "pillow>=11.3.0",
    "sunpy>=7.0.1",
    "matrix-nio>=0.25.2",
]

[project.scripts]
pyobs = "pyobs.cli.pyobs:main"
pyobsd = "pyobs.cli.pyobsd:main"
pyobsw = "pyobs.cli.pyobsw:main"

[dependency-groups]
dev = [
    "types-cryptography>=3.3.23.2,<4",
    "types-enum34>=1.1.8,<2",
    "types-ipaddress>=1.0.8,<2",
    "types-paramiko>=3.5.0.20240928,<4",
    "types-pytz>=2025.2.0.20250326,<2026",
    "types-PyYAML>=6.0.12.20250402,<7",
    "types-requests>=2.32.0.20250328,<3",
    "types-setuptools>=80.3.0.20250505,<81",
    "types-toml>=0.10.8.20240310,<0.11",
    "types-tornado>=5.1.1,<6",
    "mypy>=1.15.0,<2",
    "pytest>=8.3.5,<9",
    "pytest-asyncio>=0.26.0,<0.27",
    "pytest-cov>=6.1.1,<7",
    "pytest-mock>=3.14.0,<4",
    "black>=25.1.0,<26",
    "pre-commit>=4.2.0,<5",
    "flake8>=7.3.0",
    "aioresponses>=0.7.8",
    "coverage>=7.9.2",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.hatch.build.targets.sdist]
include = ["pyobs"]

[tool.hatch.build.targets.wheel]
include = ["pyobs"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools.package-data]
"pyobs" = ["py.typed"]

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''
